added youtube videos and link to writeup

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-	<title>Latex in HTML</title>
+	<title>MaszkotMindenkinek</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta charset="UTF-8">
@@ -25,20 +25,45 @@
 <div class="">
 	<p class="blog">
 
-		Magyarországon maszk hiány van.
-		A házi készítésű maszk használata emberenként felére tudja csökkenteni a vírus terjedését.
-		Ez országos szinten nem elhanyagolható.
-		Azonban ha csupán mindenki önmagát és szeretteit el tudja látni házi készítésű maszkkal, tovább tudjuk lassítani a vírus terjedését.
 
+		Magyarországon maszkhiány van. A házi készítésű maszk hatékonyan képes
+		csökkenteni a környezetbe jutó vírusok számát abban az esetben,
+		ha egy fertőzött (akár tünetmentes) személy viseli azt.
+		Ez országos szinten nem elhanyagolható.
+		Ha csupán mindenki önmagát és szeretteit el tudja látni házi készítésű maszkkal,
+		tovább tudjuk lassítani a vírus terjedését.
+
+		
 	</p>
 </div>
 
+<br>
 
-<div class="">
+<div class="video-container">
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/CbRsb0T7Oz8" frameborder="0"
+	<iframe width="360" height="200" src="https://www.youtube.com/embed/CbRsb0T7Oz8" frameborder="0"
 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 	</iframe>
+
+</div>
+
+<br>
+
+<div class="video-container">
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/hVEVve-3QeM" frameborder="0"
+	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+	</iframe>
+
+</div>
+
+<br>
+
+<div class="video-container">
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/VgHrnS6n4iA" frameborder="0"
+	 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+ 	</iframe>
 
 </div>
 
