added youtube videos and link to writeup

--- a/index.html
+++ b/index.html
@@ -33,11 +33,19 @@
 		Ha csupán mindenki önmagát és szeretteit el tudja látni házi készítésű maszkkal,
 		tovább tudjuk lassítani a vírus terjedését.
 
-		
+<br> <br>
+	<a href="https://docs.google.com/document/d/1OsA8tuv7DyStwcSxlCM-uVkhb9QBPPMq9T-Z9I92GVE/edit?usp=sharing">
+		Rövid értekezés a tudományos háttérről
+	</a>
+
 	</p>
 </div>
 
 <br>
+
+Ezek  videók jól osszefoglalják, hogy tudunk otthon maszkot készíteni:
+
+<br><br>
 
 <div class="video-container">
 
