--- a/hatter.html
+++ b/hatter.html
@@ -19,8 +19,16 @@
 
 <h1 > <img id='logo' src="mask.png" alt="logo" alt="">MaszkotMindenkinek</h1>
 <h4>#MaszkotMindenkinek</h4>
-<h3>Hogyan készítsünk maszkot?
-</h3>
+
+
+<a href="/">
+	<h2>Hogyan?
+	</h2>
+</a>
+
+<a href="hatter.html" class="inactiveLink">
+	<h2>Háttér</h2>
+</a>
 
 <div class="">
 	<p class="blog">
